[package]
name = "rombo"
version = "0.1.0"
license = "MIT"
authors = ["Michael Roach <git@c.mroach.com>"]
edition = "2021"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
binread = "2.2"
encoding = "0.2"
phf = { version = "0.10", features = ["macros"] }
regex = "1.0"
